force-app/main/default/objects/Opportunity_Maintenance__c/Opportunity_Maintenance__c.object-meta.xml
<CustomObject>
    <label>Opportunity Maintenance</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Maintenance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Maintenance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>