force-app/main/default/objects/Opportunity_Maintenance__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Airfares</fullName>
            </value>
            <value>
                <fullName>Qantas Business Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>