force-app/main/default/objects/Opportunity_Maintenance__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>B&amp;G Auto Oppty won&apos;t create when contract associated oppty closed after this date</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>