force-app/main/default/objects/Opportunity_Maintenance__c/fields/Expected_Opportunity_closure_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Opportunity_closure_date__c</fullName>
    <label>Expected Opportunity closure date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>