force-app/main/default/objects/Opportunity_Maintenance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Create_an_Opportunity_before_in_months__c</columns>
    <columns>Active__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Unique_Information__c</columns>
    <columns>Account_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>